Thu, 20 Mar 2008 11:13:16 +0100 <thp@perli.net>
Fix bug with unneeded download directory being created

	* src/gpodder/libpodcasts.py: Fix bug when an unneeded download
	directory would be created on every gPodder startup

Thu, 20 Mar 2008 11:11:18 +0100 <thp@perli.net>
Only serialize DumbShelve to disk when we have changed/deleted items in it

	* src/gpodder/dumbshelve.py: Add a "__dirty" flag to DumbShelve to
	know if we have to write the DumbShelve to the disk or if nothing has
	changed since the last write (and therefore no need to run the
	time-consuming serialization code again); this speeds up initial
	loading time and probably also speeds up other parts of the code

Thu, 20 Mar 2008 11:09:27 +0100 <thp@perli.net>
Timestamp and benchmark functions for logger

	* src/gpodder/liblogger.py: Add support for timestamping and benchmark
	functions to liblogger, so we see the microtime since gPodder startup
	and can also use the logging module to benchmark the speed of certain
	code parts; this is helpful for our performance patches :)

Thu, 20 Mar 2008 11:07:48 +0100 <thp@perli.net>
Performance-improving patch from Nick (nikosapi) to html entity replacement

	* src/gpodder/util.py: Merge patch from Nick (nikosapi.org) to really
	improve performance of the HTML tag stripper/entity replacement code
	by using regular expressions and some more intelligent code for
	converting numeric entities to Unicode characters

Thu, 20 Mar 2008 11:06:32 +0100 <thp@perli.net>
Add demo code for displaying a splash screen

	* doc/dev/splash-logo.py: Added testing code that would display a
	splash screen (transparent if compositing is enabled); we currently
	don't plan to use this code for reasons described on gpodder-devel

Thu, 20 Mar 2008 10:04:14 +0100 <thp@perli.net>
Filter "None" filenames from GtkFileChooser widgets

	* src/gpodder/config.py: Make sure we don't receive a "None" filename
	from GtkFileChooser widgets when connecting to the config manager
